--- a/src/main/resources/com/example/swe206project/MainScene.fxml
+++ b/src/main/resources/com/example/swe206project/MainScene.fxml
@@ -14,7 +14,7 @@
             <Font size="32.0" />
          </font>
       </Label>
-      <Button layoutX="21.0" layoutY="480.0" mnemonicParsing="false" onAction="#showNewTournament" prefHeight="47.0" prefWidth="128.0" text="New tournament" wrapText="true" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0">
+      <Button fx:id="newTButton" layoutX="21.0" layoutY="480.0" mnemonicParsing="false" onAction="#validateNewTButton" prefHeight="47.0" prefWidth="128.0" text="New tournament" wrapText="true" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0">
          <font>
             <Font size="14.0" />
          </font>
