--- a/src/main/resources/com/example/swe206project/NewTournament.fxml
+++ b/src/main/resources/com/example/swe206project/NewTournament.fxml
@@ -10,14 +10,14 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="506.0" prefWidth="695.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.swe206project.ViewController">
+<AnchorPane onMousePressed="#loadSports" prefHeight="506.0" prefWidth="695.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.swe206project.ViewController">
    <children>
-      <Label alignment="CENTER" layoutX="123.0" layoutY="78.0" prefHeight="34.0" prefWidth="212.0" text="Tournament Name">
+      <Label alignment="CENTER" layoutX="123.0" layoutY="45.0" prefHeight="48.0" prefWidth="212.0" text="Tournament Name">
          <font>
             <Font size="23.0" />
          </font>
       </Label>
-      <Label layoutX="115.0" layoutY="210.0" text="Number of participants">
+      <Label layoutX="115.0" layoutY="144.0" text="Number of participants">
          <font>
             <Font size="23.0" />
          </font>
@@ -27,33 +27,33 @@
             <Font size="19.0" />
          </font>
       </Label>
-      <TextField layoutX="123.0" layoutY="126.0" prefHeight="34.0" prefWidth="212.0" />
-      <TextField layoutX="123.0" layoutY="255.0" prefHeight="34.0" prefWidth="212.0" />
-      <ListView layoutX="26.0" layoutY="356.0" prefHeight="123.0" prefWidth="130.0" />
+      <TextField fx:id="tournamnetName" layoutX="123.0" layoutY="97.0" prefHeight="34.0" prefWidth="212.0" />
+      <TextField fx:id="numOfParticipants" layoutX="123.0" layoutY="177.0" prefHeight="34.0" prefWidth="212.0" />
+      <ListView fx:id="listOfShownSports" layoutX="26.0" layoutY="356.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="123.0" prefWidth="130.0" />
       <Label layoutX="192.0" layoutY="366.0" text="Add new sport">
          <font>
             <Font size="19.0" />
          </font>
       </Label>
-      <TextField layoutX="192.0" layoutY="403.0" prefHeight="28.0" prefWidth="123.0" />
-      <Button layoutX="233.0" layoutY="444.0" mnemonicParsing="false" text="ADD" />
-      <RadioButton layoutX="444.0" layoutY="194.0" mnemonicParsing="false" text="Round Robin">
+      <TextField fx:id="newSportName" layoutX="192.0" layoutY="403.0" prefHeight="28.0" prefWidth="123.0" />
+      <Button fx:id="submitingNewSport" layoutX="233.0" layoutY="444.0" mnemonicParsing="false" onAction="#newSportTriggered" text="ADD" />
+      <RadioButton fx:id="rType" layoutX="444.0" layoutY="194.0" mnemonicParsing="false" text="Round Robin">
          <toggleGroup>
             <ToggleGroup fx:id="tourType" />
          </toggleGroup>
       </RadioButton>
-      <RadioButton layoutX="447.0" layoutY="152.0" mnemonicParsing="false" selected="true" text="Elemination" toggleGroup="$tourType" />
-      <RadioButton layoutX="573.0" layoutY="196.0" mnemonicParsing="false" text="Team based">
+      <RadioButton fx:id="eType" layoutX="447.0" layoutY="152.0" mnemonicParsing="false" selected="true" text="Elemination" toggleGroup="$tourType" />
+      <RadioButton fx:id="teamType" layoutX="573.0" layoutY="196.0" mnemonicParsing="false" text="Team based">
          <toggleGroup>
             <ToggleGroup fx:id="memKind" />
          </toggleGroup></RadioButton>
-      <RadioButton layoutX="573.0" layoutY="154.0" mnemonicParsing="false" selected="true" text="Individual based" toggleGroup="$memKind" />
+      <RadioButton fx:id="soloType" layoutX="573.0" layoutY="154.0" mnemonicParsing="false" selected="true" text="Individual based" toggleGroup="$memKind" />
       <Label alignment="CENTER" layoutX="439.0" layoutY="97.0" prefHeight="34.0" prefWidth="212.0" text="Tournament Settings">
          <font>
             <Font size="23.0" />
          </font>
       </Label>
-      <Button layoutX="509.0" layoutY="272.0" mnemonicParsing="false" text="Select Date">
+      <Button fx:id="dateButton" layoutX="509.0" layoutY="272.0" mnemonicParsing="false" onAction="#selectDateTriggered" text="Select Date">
          <font>
             <Font size="15.0" />
          </font>
@@ -63,11 +63,17 @@
             <Font size="15.0" />
          </font>
       </Button>
-      <Button layoutX="552.0" layoutY="427.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="91.0" text="Confirm">
+      <Button fx:id="confirmButton" layoutX="552.0" layoutY="427.0" mnemonicParsing="false" onAction="#confirmNewTournemantTriggered" prefHeight="34.0" prefWidth="91.0" text="Confirm">
          <font>
             <Font size="15.0" />
          </font>
       </Button>
       <Line endX="-2.66668701171875" endY="-22.0" layoutX="559.0" layoutY="183.0" startX="-2.66668701171875" startY="25.333343505859375" />
+      <Label alignment="CENTER" layoutX="44.0" layoutY="213.0" prefHeight="48.0" prefWidth="371.0" text="Duration between matches ">
+         <font>
+            <Font size="23.0" />
+         </font>
+      </Label>
+      <TextField fx:id="DurationBetweenMatches" layoutX="123.0" layoutY="255.0" prefHeight="34.0" prefWidth="212.0" />
    </children>
 </AnchorPane>
