--- a/src/main/resources/com/example/swe206project/ViewMembers.fxml
+++ b/src/main/resources/com/example/swe206project/ViewMembers.fxml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="497.0" prefWidth="676.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.swe206project.ViewController">
    <children>
-      <Button layoutX="14.0" layoutY="437.0" mnemonicParsing="false" onAction="#showSelectedTournament" prefHeight="29.0" prefWidth="93.0" text="Back" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0">
-         <font>
-            <Font size="19.0" />
-         </font>
-      </Button>
       <Label layoutX="247.0" layoutY="105.0" prefHeight="93.0" prefWidth="181.0" text="Participants will be shown here" textAlignment="CENTER" wrapText="true">
          <font>
             <Font size="25.0" />
+         </font>
+      </Label>
+      <Label layoutX="34.0" layoutY="14.0" onMouseClicked="#showSelectedTournament" prefHeight="60.0" prefWidth="79.0" text="BACK">
+         <font>
+            <Font size="19.0" />
          </font>
       </Label>
    </children>
