registration for solo is done

--- a/src/main/resources/com/example/swe206project/registrationScene_forSolo.fxml
+++ b/src/main/resources/com/example/swe206project/registrationScene_forSolo.fxml
@@ -13,7 +13,7 @@
             <Font size="28.0" />
          </font>
       </Label>
-      <Label layoutX="43.0" layoutY="27.0" onMouseClicked="#showSelectedTournament" text="BACK">
+      <Label fx:id="BackButton" layoutX="43.0" layoutY="27.0" onMouseClicked="#showSelectedTournament" text="BACK">
          <font>
             <Font size="21.0" />
          </font>
