--- a/src/main/resources/com/example/swe206project/AddEditScores.fxml
+++ b/src/main/resources/com/example/swe206project/AddEditScores.fxml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="513.0" prefWidth="682.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.swe206project.ViewController">
+<AnchorPane onMouseEntered="#loadScores" prefHeight="497.0" prefWidth="676.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.swe206project.ViewController">
    <children>
-      <Button layoutX="536.0" layoutY="445.0" mnemonicParsing="false" prefHeight="22.0" prefWidth="88.0" text="Confirm" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="20.0">
+      <Label layoutX="183.0" layoutY="44.0" prefHeight="94.0" prefWidth="309.0" text="Enter the scores of matches" textAlignment="CENTER" wrapText="true">
          <font>
-            <Font size="17.0" />
-         </font>
-      </Button>
-      <Label layoutX="244.0" layoutY="114.0" prefHeight="117.0" prefWidth="206.0" text="the editing of the scores will be done here" textAlignment="CENTER" wrapText="true">
-         <font>
-            <Font size="22.0" />
+            <Font size="25.0" />
          </font>
       </Label>
-      <Label layoutX="25.0" layoutY="14.0" onMouseClicked="#showSelectedTournament" prefHeight="88.0" prefWidth="88.0" text="BACK">
+      <Label layoutX="34.0" layoutY="14.0" onMouseClicked="#showSelectedTournament" prefHeight="60.0" prefWidth="79.0" text="BACK">
          <font>
-            <Font size="22.0" />
+            <Font size="19.0" />
          </font>
       </Label>
+      <Label layoutX="562.0" layoutY="423.0" onMouseClicked="#ConfirmScoreTriggered" prefHeight="60.0" prefWidth="79.0" text="Confirm">
+         <font>
+            <Font size="19.0" />
+         </font>
+      </Label>
+      <ListView fx:id="ListOfShownMatches" layoutX="95.0" layoutY="123.0" prefHeight="289.0" prefWidth="460.0" />
    </children>
 </AnchorPane>
