--- a/src/main/resources/com/example/swe206project/ViewMembers.fxml
+++ b/src/main/resources/com/example/swe206project/ViewMembers.fxml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="497.0" prefWidth="676.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.swe206project.ViewController">
    <children>
-      <Label layoutX="247.0" layoutY="44.0" prefHeight="93.0" prefWidth="181.0" text="Participants of the tounament" textAlignment="CENTER" wrapText="true">
+      <Label layoutX="247.0" layoutY="105.0" prefHeight="93.0" prefWidth="181.0" text="Participants will be shown here" textAlignment="CENTER" wrapText="true">
          <font>
             <Font size="25.0" />
          </font>
@@ -18,6 +16,5 @@
             <Font size="19.0" />
          </font>
       </Label>
-      <ListView fx:id="listOfParticipants" layoutX="183.0" layoutY="137.0" prefHeight="321.0" prefWidth="309.0" />
    </children>
 </AnchorPane>
